--- a/Source/CriticalPath.Web/Web.config
+++ b/Source/CriticalPath.Web/Web.config
@@ -19,7 +19,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization uiCulture="en-GB" culture="en-GB" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
+<!--
     <globalization enableClientBasedCulture="true" uiCulture="auto" culture="auto" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
+-->
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
