--- a/Source/CriticalPath.Web/packages.config
+++ b/Source/CriticalPath.Web/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.4.9" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="ImageResizer" version="4.0.4" targetFramework="net46" />
   <package id="jQuery" version="2.2.0" targetFramework="net46" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net46" />
